# slay-the-dragon

./: .gitignore  CMakeLists.txt  README.md  deck.txt  main.cpp
headers/: card.h  card.hpp  cardList.h  details.hpp  enemy.h  gameManager.h  gameManager.hpp  player.h  player.hpp  potions.h  potions.hpp
headers/enemies/: darkElf.hpp  dragon.hpp  enemy.hpp  enemyFactory.hpp  skeleton.hpp
src/: card.cpp  cardList.cpp  enemy.cpp  gameManager.cpp  player.cpp  potions.cpp
src/enemies/: darkElf.cpp  dragon.cpp  enemy.cpp  enemyFactory.cpp  skeleton.cpp
